--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul>
             <li><a href="">Студiя</a></li>
-            <li><a href="">Портфолiо</a></li>
+            <li><a href="/portfolio.html">Портфолiо</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         </nav>
