create css file

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
             <ul>
                 <li><a href="">Студiя</a></li>
-                <li><a href="">Портфолiо</a></li>
+                <li><a href="./portfolio.html">Портфолiо</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -28,8 +29,72 @@
         </ul>
     </header>
     <main>
-        
-        
+      <section><h1 hidden>Портфолiо</h1>
+        <ul>
+        <li class="filter button">
+            <button type="button" class="buttons">Усi</button>
+        </li>
+        <li class="filter button">
+            <button type="button" class="buttons">Веб-сайти</button>
+        </li>
+        <li class="filter button">
+            <button type="button" class="buttons">Додатки</button>
+        </li>
+        <li class="filter button">
+            <button type="button" class="buttons">Дизайн</button>
+        </li>
+        <li class="filter button">
+            <button type="button" class="buttons">Маркетинг</button>
+        </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Teckhnokryak.jpg" alt="laptop with pictures" width="370"></a>
+                <a href="./portfolio.html"><Технокряк</a>
+                <a href="./portfolio.html">Веб-сайт</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/New-Orlean-vs-Golden-State.jpg" alt="basketbol-players" width="370"></a>
+                <a href="./portfolio.html">Постер New Orlean vs Golden Star</a>
+                <a href="./portfolio.html">Дизайн</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/The-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370"></a>
+                <a href="./portfolio.html">Ресторан Seafood</a>
+                <a href="./portfolio.html">Додаток</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Headphones.jpg" alt="headphones" width="370"></a>
+                <a href="./portfolio.html">Проєкт Prime</a>
+                <a href="./portfolio.html">Маркетинг</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Boxes.jpg" alt="two-boxes" width="370"></a>
+                <a href="./portfolio.html">Проєкт Boxes</a>
+                <a href="./portfolio.html">Додаток</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Laptop.jpg" alt="laptop" width="370"></a>
+                <a href="./portfolio.html">Inspiration has no Borders</a>
+                <a href="./portfolio.html">Веб-сайти</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Book.jpg" alt="book-with-pictures" width="370"></a>
+                <a href="./portfolio.html">Видання Limited Edition</a>
+                <a href="./portfolio.html">Дизайн</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Label-tag.jpg" alt="Label-tag" width="370"></a>
+                <a href="./portfolio.html">Проєкт LAB</a>
+                <a href="./portfolio.html">Маркетинг</a>
+            </li>
+            <li>
+                <a href="./portfolio.html"><img src="./img/Laptop-with-hands.jpg" alt="Laptop-with-hands" width="370"></a>
+                <a href="./portfolio.html">Growing Business</a>
+                <a href="./portfolio.html">Додаток</a>
+            </li>
+        </ul>
+    </section>
     </main>
     <footer>
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
