--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul>
             <li><a href="">Студiя</a></li>
-            <li><a href="/portfolio.html">Портфолiо</a></li>
+            <li><a href="./portfolio.html">Портфолiо</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         </nav>
