--- a/index.html
+++ b/index.html
@@ -7,77 +7,77 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <header>
+<body class="page">
+    <header class="page-header">
         <nav>
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
-        <ul>
-            <li><a href="">Студiя</a></li>
+        <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студiя</a></li>
             <li><a href="./portfolio.html">Портфолiо</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         </nav>
-        <ul>
+        <ul class="site-nav list">
             <li><p><a href="malito:info@devstudio.com">info@devstudio.com</a></p></li>
             <li><p><a href="tel:+380961111111">+38 096 111 11 11</a></p></li>
         </ul>
     </header>
     <main>
-            <section>
-                <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button type="button">Замовити послугу</button>
+            <section class="section">
+                <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="button primary">Замовити послугу</button>
             </section>
-            <section>
-                <h2>Нашi переваги</h2>
-                <ul>
-                    <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <section class="section">
+                <h2 hidden>Нашi переваги</h2>
+                <ul class="site-nav list">
+                    <li><h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li><h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <li><h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li><h3>ПЛАНУВАННЯ</h3>
+                    <li><h3 class="section-title">ПЛАНУВАННЯ</h3>
                         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <li><h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
                 </section>
-                <section>
-                <h3>Чим ми займаємося</h3>
-                <ul>
+                <section class="section">
+                <h3 class="section-title">Чим ми займаємося</h3>
+                <ul class="site-nav list">
                     <li><img src="./img/what-we-do1.jpg" alt="what we do1" width="370"></li>
                     <li><img src="./img/what-we-do2.jpg" alt="what we do2" width="370"></li>
                     <li><img src="./img/what-we-do3.jpg" alt="what we do3" width="370"></li>
                     </ul>
             </section>
-            <section>
-                <h2>Наша команда</h2>
-                    <ul>
+            <section class="section">
+                <h2 class="section-title">Наша команда</h2>
+                    <ul class="site-nav list">
                         <li><img src="./img/our-team-product-designer.jpg" alt="product-designer" width="270">
-                            <h3>Ігор Дем'яненко</h3>
+                            <h3 class="section-title">Ігор Дем'яненко</h3>
                             <p>Product Designer</p>
                         </li>
                         <li><img src="./img/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
-                            <h3>Ольга Рєпіна</h3>
+                            <h3 class="section-title">Ольга Рєпіна</h3>
                             <p>Frontend Developer</p>
                         </li>
                         <li><img src="./img/our-team-marketing.jpg" alt="marketing" width="270">
-                            <h3>Микола Тарасов</h3>
+                            <h3 class="section-title">Микола Тарасов</h3>
                             <p>Marketing</p>
                         </li>
                         <li><img src="./img/our-team-ui-designer.jpg" alt="ui designer" width="270">   
-                            <h3>Михайло Єрмаков</h3>
+                            <h3 class="section-title">Михайло Єрмаков</h3>
                             <p>UI Designer</p>
                         </li>
                     </ul>
             </section>
     </main>
-    <footer>
-                <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+    <footer class="page-footer">
+                <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 <address>
-                    <ul>
+                    <ul class="nav-footer list">
                         <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
                         <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
