--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
-    <header>
-        <nav>
+<body class="page">
+    <header class="page-header">
+        <nav class="site nav">
             <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
-            <ul>
-                <li><a href="">Студiя</a></li>
-                <li><a href="./portfolio.html">Портфолiо</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html">Студiя</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолiо</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="site-nav list">
             <li>
                 <p><a href="malito:info@devstudio.com">info@devstudio.com</a></p>
             </li>
@@ -29,77 +29,76 @@
         </ul>
     </header>
     <main>
-      <section><h1 hidden>Портфолiо</h1>
-        <ul>
+      <h1 hidden class="section">Портфолiо</h1>
+        <ul class="site-nav list">
         <li class="filter button">
-            <button type="button" class="buttons">Усi</button>
+            <button type="button" class="button nav portfolio">Усi</button>
         </li>
         <li class="filter button">
-            <button type="button" class="buttons">Веб-сайти</button>
+            <button type="button" class="button nav portfolio">Веб-сайти</button>
         </li>
         <li class="filter button">
-            <button type="button" class="buttons">Додатки</button>
+            <button type="button" class="button nav portfolio">Додатки</button>
         </li>
         <li class="filter button">
-            <button type="button" class="buttons">Дизайн</button>
+            <button type="button" class="button nav portfolio">Дизайн</button>
         </li>
         <li class="filter button">
-            <button type="button" class="buttons">Маркетинг</button>
+            <button type="button" class="button nav portfolio">Маркетинг</button>
         </li>
         </ul>
-        <ul>
+        <ul class="site-nav list">
             <li>
                 <a href="./portfolio.html"><img src="./img/Teckhnokryak.jpg" alt="laptop with pictures" width="370"></a>
-                <a href="./portfolio.html"><Технокряк</a>
-                <a href="./portfolio.html">Веб-сайт</a>
+                <h2 class="section-title">Технокряк</h2>
+                <p>Веб-сайт</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/New-Orlean-vs-Golden-State.jpg" alt="basketbol-players" width="370"></a>
-                <a href="./portfolio.html">Постер New Orlean vs Golden Star</a>
-                <a href="./portfolio.html">Дизайн</a>
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/The-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370"></a>
-                <a href="./portfolio.html">Ресторан Seafood</a>
-                <a href="./portfolio.html">Додаток</a>
+                <h2 class="section-title">Ресторан Seafood</h2>
+                <p>Додаток</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Headphones.jpg" alt="headphones" width="370"></a>
-                <a href="./portfolio.html">Проєкт Prime</a>
-                <a href="./portfolio.html">Маркетинг</a>
+                <h2 class="section-title">Проєкт Prime</h2>
+                <p>Маркетинг</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Boxes.jpg" alt="two-boxes" width="370"></a>
-                <a href="./portfolio.html">Проєкт Boxes</a>
-                <a href="./portfolio.html">Додаток</a>
+                <h2 class="section-title">Проєкт Boxes</h2>
+                <p>Додаток</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Laptop.jpg" alt="laptop" width="370"></a>
-                <a href="./portfolio.html">Inspiration has no Borders</a>
-                <a href="./portfolio.html">Веб-сайти</a>
+                <h2 class="section-title">Inspiration has no Borders</h2>
+                <p>Веб-сайти</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Book.jpg" alt="book-with-pictures" width="370"></a>
-                <a href="./portfolio.html">Видання Limited Edition</a>
-                <a href="./portfolio.html">Дизайн</a>
+                <h2 class="section-title">Видання Limited Edition</h2>
+                <p>Дизайн</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Label-tag.jpg" alt="Label-tag" width="370"></a>
-                <a href="./portfolio.html">Проєкт LAB</a>
-                <a href="./portfolio.html">Маркетинг</a>
+                <h2 class="section-title">Проєкт LAB</h2>
+                <p>Маркетинг</p>
             </li>
             <li>
                 <a href="./portfolio.html"><img src="./img/Laptop-with-hands.jpg" alt="Laptop-with-hands" width="370"></a>
-                <a href="./portfolio.html">Growing Business</a>
-                <a href="./portfolio.html">Додаток</a>
+                <h2 class="section-title">Growing Business</h2>
+                <p>Додаток</p>
             </li>
         </ul>
-    </section>
     </main>
-    <footer>
-        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+    <footer class="page-footer">
+        <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <address>
-            <ul>
+            <ul class="nav-footer list"> 
                 <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
                         пр-т Лесі Українки, 26</a></li>
                 <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
