--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
         </ul>
     </header>
     <main>
+        <section>
       <h1 hidden class="section">Портфолiо</h1>
         <ul class="site-nav list">
         <li class="filter button">
@@ -94,6 +95,7 @@
                 <p>Додаток</p>
             </li>
         </ul>
+    </section>
     </main>
     <footer class="page-footer">
         <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
