--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
@@ -31,16 +32,16 @@
                 <h2 hidden>Нашi переваги</h2>
                 <ul class="site-nav list">
                     <li><h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <p class="benefits">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li><h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <p class="benefits">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li><h3 class="section-title">ПЛАНУВАННЯ</h3>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <p class="benefits">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li><h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <p class="benefits">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
                 </section>
@@ -57,19 +58,19 @@
                     <ul class="site-nav list">
                         <li><img src="./img/our-team-product-designer.jpg" alt="product-designer" width="270">
                             <h3 class="section-title">Ігор Дем'яненко</h3>
-                            <p>Product Designer</p>
+                            <p class="pos">Product Designer</p>
                         </li>
                         <li><img src="./img/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
                             <h3 class="section-title">Ольга Рєпіна</h3>
-                            <p>Frontend Developer</p>
+                            <p class="pos">Frontend Developer</p>
                         </li>
                         <li><img src="./img/our-team-marketing.jpg" alt="marketing" width="270">
                             <h3 class="section-title">Микола Тарасов</h3>
-                            <p>Marketing</p>
+                            <p class="pos">Marketing</p>
                         </li>
                         <li><img src="./img/our-team-ui-designer.jpg" alt="ui designer" width="270">   
                             <h3 class="section-title">Михайло Єрмаков</h3>
-                            <p>UI Designer</p>
+                            <p class="pos">UI Designer</p>
                         </li>
                     </ul>
             </section>
