--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -50,49 +51,58 @@
         </ul>
         <ul class="site-nav list">
             <li>
-                <a href="./portfolio.html"><img src="./img/Teckhnokryak.jpg" alt="laptop with pictures" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Teckhnokryak.jpg" alt="laptop with pictures" width="370">
                 <h2 class="section-title">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <p class="type">Веб-сайт</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/New-Orlean-vs-Golden-State.jpg" alt="basketbol-players" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/New-Orlean-vs-Golden-State.jpg" alt="basketbol-players" width="370">
                 <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <p class="type">Дизайн</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/The-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/The-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
                 <h2 class="section-title">Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <p class="type">Додаток</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Headphones.jpg" alt="headphones" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Headphones.jpg" alt="headphones" width="370">
                 <h2 class="section-title">Проєкт Prime</h2>
-                <p>Маркетинг</p>
+                <p class="type">Маркетинг</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Boxes.jpg" alt="two-boxes" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Boxes.jpg" alt="two-boxes" width="370">
                 <h2 class="section-title">Проєкт Boxes</h2>
-                <p>Додаток</p>
+                <p class="type">Додаток</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Laptop.jpg" alt="laptop" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Laptop.jpg" alt="laptop" width="370">
                 <h2 class="section-title">Inspiration has no Borders</h2>
-                <p>Веб-сайти</p>
+                <p class="type">Веб-сайти</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Book.jpg" alt="book-with-pictures" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Book.jpg" alt="book-with-pictures" width="370">
                 <h2 class="section-title">Видання Limited Edition</h2>
-                <p>Дизайн</p>
+                <p class="type">Дизайн</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Label-tag.jpg" alt="Label-tag" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Label-tag.jpg" alt="Label-tag" width="370">
                 <h2 class="section-title">Проєкт LAB</h2>
-                <p>Маркетинг</p>
+                <p class="type">Маркетинг</p>
+                </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Laptop-with-hands.jpg" alt="Laptop-with-hands" width="370"></a>
+                <a href="./portfolio.html"><img src="./img/Laptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
                 <h2 class="section-title">Growing Business</h2>
-                <p>Додаток</p>
+                <p class="type">Додаток</p>
+                </a>
             </li>
         </ul>
     </section>
