--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </ul>
         </nav>
         <ul class="site-nav list">
-            <li><p><a href="malito:info@devstudio.com">info@devstudio.com</a></p></li>
-            <li><p><a href="tel:+380961111111">+38 096 111 11 11</a></p></li>
+            <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
             <section class="section">
-                <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="the">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="button primary">Замовити послугу</button>
             </section>
             <section class="section">
@@ -76,14 +76,15 @@
             </section>
     </main>
     <footer class="page-footer">
-                <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-                <address>
-                    <ul class="nav-footer list">
-                        <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                    </ul>
-                </address>
+        <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+        <address>
+            <ul class="nav-footer list">
+                <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
+                        пр-т Лесі Українки, 26</a></li>
+                <li><a class="contacts" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
