--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body class="page">
     <header class="page-header">
-        <nav class="site nav">
+        <nav>
             <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav list">
                 <li><a href="./index.html">Студiя</a></li>
@@ -21,11 +20,9 @@
             </ul>
         </nav>
         <ul class="site-nav list">
-            <li>
-                <p><a href="malito:info@devstudio.com">info@devstudio.com</a></p>
+            <li><a href="malito:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -51,55 +48,55 @@
         </ul>
         <ul class="site-nav list">
             <li>
-                <a href="./portfolio.html"><img src="./img/Teckhnokryak.jpg" alt="laptop with pictures" width="370">
+                <a href="./portfolio.html"><img src="./img/teckhnokryak.jpg" alt="laptop with pictures" width="370">
                 <h2 class="section-title">Технокряк</h2>
                 <p class="type">Веб-сайт</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/New-Orlean-vs-Golden-State.jpg" alt="basketbol-players" width="370">
+                <a href="./portfolio.html"><img src="./img/new-orlean-vs-golden-state.jpg" alt="basketbol-players" width="370">
                 <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                 <p class="type">Дизайн</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/The-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
+                <a href="./portfolio.html"><img src="./img/the-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
                 <h2 class="section-title">Ресторан Seafood</h2>
                 <p class="type">Додаток</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Headphones.jpg" alt="headphones" width="370">
+                <a href="./portfolio.html"><img src="./img/headphones.jpg" alt="headphones" width="370">
                 <h2 class="section-title">Проєкт Prime</h2>
                 <p class="type">Маркетинг</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Boxes.jpg" alt="two-boxes" width="370">
+                <a href="./portfolio.html"><img src="./img/boxes.jpg" alt="two-boxes" width="370">
                 <h2 class="section-title">Проєкт Boxes</h2>
                 <p class="type">Додаток</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Laptop.jpg" alt="laptop" width="370">
+                <a href="./portfolio.html"><img src="./img/laptop.jpg" alt="laptop" width="370">
                 <h2 class="section-title">Inspiration has no Borders</h2>
                 <p class="type">Веб-сайти</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Book.jpg" alt="book-with-pictures" width="370">
+                <a href="./portfolio.html"><img src="./img/book.jpg" alt="book-with-pictures" width="370">
                 <h2 class="section-title">Видання Limited Edition</h2>
                 <p class="type">Дизайн</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Label-tag.jpg" alt="Label-tag" width="370">
+                <a href="./portfolio.html"><img src="./img/label-tag.jpg" alt="Label-tag" width="370">
                 <h2 class="section-title">Проєкт LAB</h2>
                 <p class="type">Маркетинг</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/Laptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
+                <a href="./portfolio.html"><img src="./img/laptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
                 <h2 class="section-title">Growing Business</h2>
                 <p class="type">Додаток</p>
                 </a>
@@ -113,8 +110,8 @@
             <ul class="nav-footer list"> 
                 <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
                         пр-т Лесі Українки, 26</a></li>
-                <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="contacts" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
