--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
@@ -14,18 +17,18 @@
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list">
             <li><a href="./index.html" class="link current">Студiя</a></li>
-            <li><a href="./portfolio.html">Портфолiо</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолiо</a></li>
+            <li><a href="" class="link">Контакты</a></li>
         </ul>
         </nav>
-        <ul class="site-nav list">
-            <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts list">
+            <li><a href="malito:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-            <section class="section">
-                <h1 class="the">Ефективні рішення для вашого бізнесу</h1>
+            <section class="hero section">
+                <h1 class="main-header">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="button primary">Замовити послугу</button>
             </section>
             <section class="section">
@@ -46,7 +49,7 @@
                 </ul>
                 </section>
                 <section class="section">
-                <h3 class="section-title">Чим ми займаємося</h3>
+                <h2 class="title">Чим ми займаємося</h2>
                 <ul class="site-nav list">
                     <li><img src="./img/what-we-do1.jpg" alt="what we do1" width="370"></li>
                     <li><img src="./img/what-we-do2.jpg" alt="what we do2" width="370"></li>
@@ -54,23 +57,23 @@
                     </ul>
             </section>
             <section class="section">
-                <h2 class="section-title">Наша команда</h2>
+                <h2 class="team">Наша команда</h2>
                     <ul class="site-nav list">
                         <li><img src="./img/our-team-product-designer.jpg" alt="product-designer" width="270">
-                            <h3 class="section-title">Ігор Дем'яненко</h3>
+                            <h3 class="team-name">Ігор Дем'яненко</h3>
                             <p class="pos">Product Designer</p>
                         </li>
                         <li><img src="./img/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
-                            <h3 class="section-title">Ольга Рєпіна</h3>
-                            <p class="pos">Frontend Developer</p>
+                            <h3 class="team-name">Ольга Рєпіна</h3>
+                            <p class="position">Frontend Developer</p>
                         </li>
                         <li><img src="./img/our-team-marketing.jpg" alt="marketing" width="270">
-                            <h3 class="section-title">Микола Тарасов</h3>
-                            <p class="pos">Marketing</p>
+                            <h3 class="team-name">Микола Тарасов</h3>
+                            <p class="position">Marketing</p>
                         </li>
                         <li><img src="./img/our-team-ui-designer.jpg" alt="ui designer" width="270">   
-                            <h3 class="section-title">Михайло Єрмаков</h3>
-                            <p class="pos">UI Designer</p>
+                            <h3 class="team-name">Михайло Єрмаков</h3>
+                            <p class="position">UI Designer</p>
                         </li>
                     </ul>
             </section>
