--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
@@ -14,16 +17,14 @@
         <nav>
             <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="./index.html">Студiя</a></li>
+                <li><a href="./index.html" class="link">Студiя</a></li>
                 <li><a href="./portfolio.html" class="link current">Портфолiо</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="site-nav list">
-            <li><a href="malito:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+            <li><a href="malito:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
