--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
                 <section class="section">
                 <h2 class="title">Чим ми займаємося</h2>
                 <ul class="site-nav list">
-                    <li><img src="./img/what-we-do1.jpg" alt="what we do1" width="370"></li>
-                    <li><img src="./img/what-we-do2.jpg" alt="what we do2" width="370"></li>
-                    <li><img src="./img/what-we-do3.jpg" alt="what we do3" width="370"></li>
+                    <li><img src="./images/what-we-do1.jpg" alt="what we do1" width="370"></li>
+                    <li><img src="./images/what-we-do2.jpg" alt="what we do2" width="370"></li>
+                    <li><img src="./images/what-we-do3.jpg" alt="what we do3" width="370"></li>
                     </ul>
             </section>
             <section class="section">
                 <h2 class="team">Наша команда</h2>
                     <ul class="site-nav list">
-                        <li><img src="./img/our-team-product-designer.jpg" alt="product-designer" width="270">
+                        <li><img src="./images/our-team-product-designer.jpg" alt="product-designer" width="270">
                             <h3 class="team-name">Ігор Дем'яненко</h3>
                             <p class="pos">Product Designer</p>
                         </li>
-                        <li><img src="./img/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
+                        <li><img src="./images/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
                             <h3 class="team-name">Ольга Рєпіна</h3>
                             <p class="position">Frontend Developer</p>
                         </li>
-                        <li><img src="./img/our-team-marketing.jpg" alt="marketing" width="270">
+                        <li><img src="./images/our-team-marketing.jpg" alt="marketing" width="270">
                             <h3 class="team-name">Микола Тарасов</h3>
                             <p class="position">Marketing</p>
                         </li>
-                        <li><img src="./img/our-team-ui-designer.jpg" alt="ui designer" width="270">   
+                        <li><img src="./images/our-team-ui-designer.jpg" alt="ui designer" width="270">   
                             <h3 class="team-name">Михайло Єрмаков</h3>
                             <p class="position">UI Designer</p>
                         </li>
