--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="site-nav list">
+        <ul class="header-contacts list">
             <li><a href="malito:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
@@ -49,55 +49,55 @@
         </ul>
         <ul class="site-nav list">
             <li>
-                <a href="./portfolio.html"><img src="./img/teckhnokryak.jpg" alt="laptop with pictures" width="370">
+                <a href="./portfolio.html"><img src="./images/teckhnokryak.jpg" alt="laptop with pictures" width="370">
                 <h2 class="section-title">Технокряк</h2>
                 <p class="type">Веб-сайт</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/new-orlean-vs-golden-state.jpg" alt="basketbol-players" width="370">
+                <a href="./portfolio.html"><img src="./images/new-orlean-vs-golden-state.jpg" alt="basketbol-players" width="370">
                 <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                 <p class="type">Дизайн</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/the-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
+                <a href="./portfolio.html"><img src="./images/the-seafood-restaurant.jpg" alt="logo-of-seafood-reustaurant" width="370">
                 <h2 class="section-title">Ресторан Seafood</h2>
                 <p class="type">Додаток</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/headphones.jpg" alt="headphones" width="370">
+                <a href="./portfolio.html"><img src="./images/headphones.jpg" alt="headphones" width="370">
                 <h2 class="section-title">Проєкт Prime</h2>
                 <p class="type">Маркетинг</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/boxes.jpg" alt="two-boxes" width="370">
+                <a href="./portfolio.html"><img src="./images/boxes.jpg" alt="two-boxes" width="370">
                 <h2 class="section-title">Проєкт Boxes</h2>
                 <p class="type">Додаток</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/laptop.jpg" alt="laptop" width="370">
+                <a href="./portfolio.html"><img src="./images/laptop.jpg" alt="laptop" width="370">
                 <h2 class="section-title">Inspiration has no Borders</h2>
                 <p class="type">Веб-сайти</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/book.jpg" alt="book-with-pictures" width="370">
+                <a href="./portfolio.html"><img src="./images/book.jpg" alt="book-with-pictures" width="370">
                 <h2 class="section-title">Видання Limited Edition</h2>
                 <p class="type">Дизайн</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/label-tag.jpg" alt="Label-tag" width="370">
+                <a href="./portfolio.html"><img src="./images/label-tag.jpg" alt="Label-tag" width="370">
                 <h2 class="section-title">Проєкт LAB</h2>
                 <p class="type">Маркетинг</p>
                 </a>
             </li>
             <li>
-                <a href="./portfolio.html"><img src="./img/laptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
+                <a href="./portfolio.html"><img src="./imageslaptop-with-hands.jpg" alt="Laptop-with-hands" width="370">
                 <h2 class="section-title">Growing Business</h2>
                 <p class="type">Додаток</p>
                 </a>
@@ -105,16 +105,16 @@
         </ul>
     </section>
     </main>
-    <footer class="page-footer">
-        <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-        <address>
-            <ul class="nav-footer list"> 
-                <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
-                        пр-т Лесі Українки, 26</a></li>
-                <li><a class="contacts" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+<footer class="page-footer">
+    <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+    <address>
+        <ul class="nav-footer list">
+            <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
+                    пр-т Лесі Українки, 26</a></li>
+            <li><a class="contacts" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
+</footer>
 </body>
 </html>
