--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <ul class="site-nav list">
                         <li><img src="./images/our-team-product-designer.jpg" alt="product-designer" width="270">
                             <h3 class="team-name">Ігор Дем'яненко</h3>
-                            <p class="pos">Product Designer</p>
+                            <p class="position">Product Designer</p>
                         </li>
                         <li><img src="./images/our-team-frontend-developer.jpg" alt="frontend-developer" width="270">
                             <h3 class="team-name">Ольга Рєпіна</h3>
