--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body class="page">
     <header class="page-header">
-        <nav>
+        <div class="container">
+            <nav>
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="site-nav list">
             <li><a href="./index.html" class="link current">Студiя</a></li>
@@ -26,6 +27,7 @@
             <li><a href="malito:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main>
             <section class="hero section">
