--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
     <footer class="page-footer">
         <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-        <address>
+        <address class="footer-address">
             <ul class="nav-footer list">
                 <li><a href="https://goo.gl/maps/p2XQU8UmfZMLt7c46" target="_blank" rel="noreferrer noopener">м. Київ,
                         пр-т Лесі Українки, 26</a></li>
